--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,16 @@
 			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.basecamp4j</groupId>
+			<artifactId>basecamp4j</artifactId>
+			<version>0.9.3</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
