--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.basecamp4j</groupId>
-			<artifactId>basecamp4j</artifactId>
-			<version>0.9.3</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
 		</dependency>
 	</dependencies>
 	<build>
