--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,8 @@
 log4j.rootLogger=debug, R
 
 log4j.appender.R = campfire4j.CampfireAppender
-log4j.appender.R.token = 
-log4j.appender.R.roomId = 
-log4j.appender.R.application = 
+log4j.appender.R.token = 1848335ce7a2fd3c20c86bfdc994df8e57ac2182
+log4j.appender.R.roomId = 487059
+log4j.appender.R.application = linkznet
 log4j.appender.R.layout = org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%-5p %d{HH:mm:ss,SSS} %c:%L - %m%n
